# unstable-diffusion

./: Gender_prompts_sources.ipynb  Image_getter.ipynb  Prompts.json  README.md  annotation  annotation.csv  annotation.ipynb  cpsaat11.csv  explore.ipynb  install.bat  links.txt  occupations.txt  parse_gendered_professions.py  profession_labeling_guidelines.txt  prompter.py  pyproject.toml  requirements.txt  split_images.py  text2img_examply.py  text2img_generator.py  text2img_output.json  venv.sh
annotations/: kappa.ipynb  venv.sh
annotations/jsons/: alan.json  chris.json  johan.json
clip/: gender_vec_distance.py
occupations_and_prompts/: prompter.py  prompts.txt
text2imgdata_clean/: flatten.py
unstable/: meta_tools.py
unstable/annotations/: Annotation_Guidlines.rtf  Annotation_Guidlines.txt  kappa.ipynb  kappa.py  labeling_bias.py  load_anno_df.py  stacked_bar_plots.py
unstable/api/: text2img_generator.py
unstable/clip_vec/: gender_vec_distance.py  modules.py
unstable/data/: metadata.csv
unstable/data/annotations/: karl.json
unstable/occupations_and_prompts/: gender_prof.parquet  parse_gendered_professions.py  prompter.py  raw_occupations.txt
unstable/scraper/: Image_getter.ipynb  laion_scraper.py
unstable/statistics/: bootstrap.py  boxplots.py  conf_interval.py  credibility.py
