[build-system]
requires = ["setuptools==63.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "unstable"
version = "0.0.1"
dependencies = [
    'absl-py==1.3.0',
    'aiohttp==3.8.3',
    'aiosignal==1.3.1',
    'albumentations==0.4.3',
    'altair==4.2.0',
    'antlr4-python3-runtime==4.8',
    'async-timeout==4.0.2',
    'attrs==22.1.0',
    'backports.zoneinfo==0.2.1',
    'black==22.10.0',
    'bleach==5.0.1',
    'blinker==1.5',
    'bokeh==2.4.3',
    'brotlipy==0.7.0',
    'cachetools==5.2.0',
    'certifi==2022.9.24',
    'click==8.1.3',
    'colorcet==3.0.1',
    'coloredlogs==15.0.1',
    'commonmark==0.9.1',
    'diffusers==0.7.2',
    'einops==0.3.0',
    'filelock==3.8.0',
    'flatbuffers==22.10.26',
    'frozenlist==1.3.3',
    'fsspec==2022.11.0',
    'ftfy==6.1.1',
    'future==0.18.2',
    'gitdb==4.0.9',
    'GitPython==3.1.29',
    'google-auth==2.14.1',
    'google-auth-oauthlib==0.4.6',
    'grpcio==1.50.0',
    'holoviews==1.15.2',
    'huggingface-hub==0.10.1',
    'humanfriendly==10.0',
    'hvplot==0.8.1',
    'imageio==2.9.0',
    'imageio-ffmpeg==0.4.2',
    'imgaug==0.2.6',
    'importlib-metadata==5.0.0',
    'importlib-resources==5.10.0',
    'invisible-watermark==0.1.5',
    'Jinja2==3.1.2',
    'jsonschema==4.17.0',
    'kornia==0.6.0',
    'lxml==4.9.1',
    'Markdown==3.4.1',
    'MarkupSafe==2.1.1',
    'mkl-fft==1.3.1',
    'mpmath==1.2.1',
    'multidict==6.0.2',
    'mypy-extensions==0.4.3',
    'networkx==2.8.8',
    'numpy==1.23.4',
    'oauthlib==3.2.2',
    'omegaconf==2.1.1',
    'onnx==1.12.0',
    'onnxruntime==1.13.1',
    'opencv-python==4.1.2.30',
    'opencv-python-headless==4.6.0.66',
    'pandas==1.5.1',
    'panel==0.14.1',
    'param==1.12.2',
    'pathspec==0.10.2',
    'patsy==0.5.3',
    'Pillow==9.2.0',
    'pkgutil_resolve_name==1.3.10',
    'protobuf==3.20.1',
    'pudb==2019.2',
    'pyarrow==10.0.0',
    'pyasn1==0.4.8',
    'pyasn1-modules==0.2.8',
    'pyct==0.4.8',
    'pydeck==0.8.0',
    'pyDeprecate==0.3.1',
    'Pympler==1.0.1',
    'pyreadline3==3.4.1',
    'pyrsistent==0.19.2',
    'pytorch-lightning==1.4.2',
    'pytz==2022.6',
    'pytz-deprecation-shim==0.1.0.post0',
    'pyviz-comms==2.2.1',
    'PyWavelets==1.4.1',
    'pywin32==227',
    'PyYAML==6.0',
    'regex==2022.10.31',
    'requests-oauthlib==1.3.1',
    'rich==12.6.0',
    'rsa==4.9',
    'scikit-image==0.19.3',
    'scipy==1.9.3',
    'semver==2.13.0',
    'smmap==5.0.0',
    'statsmodels==0.13.5',
    'streamlit==1.14.1',
    'sympy==1.11.1',
    'tensorboard==2.11.0',
    'tensorboard-data-server==0.6.1',
    'tensorboard-plugin-wit==1.8.1',
    'test-tube==0.7.5',
    'tifffile==2022.10.10',
    'tokenizers==0.12.1',
    'toml==0.10.2',
    'tomli==2.0.1',
    'toolz==0.12.0',
    'torch==1.11.0',
    'torch-fidelity==0.3.0',
    'torchmetrics==0.6.0',
    'torchvision==0.12.0',
    'tqdm==4.64.1',
    'transformers==4.19.2',
    'tzdata==2022.6',
    'tzlocal==4.2',
    'urwid==2.1.2',
    'validators==0.20.0',
    'watchdog==2.1.9',
    'webencodings==0.5.1',
    'Werkzeug==2.2.2',
    'wincertstore==0.2',
    'yarl==1.8.1',
    'zipp==3.10.0',
]



[tool.setuptools]
packages = ["unstable"]